* Made Google+ icons standards-compliant.
* Added ability to hide Theme License admin page via `themeblvd_global_config` filter.
* Added filterable "edit_theme_options" capability to License admin page.
* Added default styling for captions of a `[gallery]`.
* Added support for some new features of Sliders plugin v1.1+.
* Added support for WP 3.5+ media uploader.
* Updated Roundabout script to v2.4.2
* Expanded "Featured Image Link" video link to accept any WordPress oEmbed URL.
* Slight UI improvements to Logo option in default Theme Options panel.
* Improved default `content-attachment.php`.
* In default `content.php` and `content-attachment.php`, removed anchor tag on post title for single posts.
* In default `content-list.php`, `content-grid.php`, and `content-archive.php`, changed linked titles to use `the_title_attribute()` for anchor titles.
* In default `content.php` and `content-page.php`, moved clearfix to directly below `the_content()`.
* WP 3.6: Filtered `wp_link_pages()` to match `themeblvd_pagination()`
* WP 3.6: Added responsive support for self-hosted videos.
* WP 3.6: Added responsive support for self-hosted audio files.
* WP 3.6: Checked all post formats with `post_formats_compat` -- styles needed for quote format only.

1.0.2
-----

* Fixed errors with how featured images display responsively as result of v1.0.1 update.
* Fixed a couple styling quirks on default skin's main menu.
* Fixed jQuery issues in selecting pages with slugs containing non-English characters in option interface. -- This was a result from the new "fancy" select menu addition from the last update.
* Re-generated jumpstart.po for localization.

1.0.1
-----

* Updated framework version to 2.2.1.
* Adjusted default Jump Start's responsive structure to use the "snap effect."
* Optimized database queries on frontend.
* Fixed pagination bug with post list/grid page templates.
* Fixed bug with showing/hiding meta data on single blog posts.
* Fixed slider image links in IE.