@@ -15,6 +15,7 @@ Jump Start Changelog
 * Added default styling for captions of a `[gallery]`.
 * Added support for some new features of Sliders plugin v1.1+.
 * Added support for WP 3.5+ media uploader.
+* Added support for Nivo Slider.
 * Updated Roundabout script to v2.4.2
 * Expanded "Featured Image Link" video link to accept any WordPress oEmbed URL.
 * Slight UI improvements to Logo option in default Theme Options panel.
